feat(ui): migrate components to schema-first props-only interface

--- a/packages/rettangoli-ui/src/components/accordionItem/accordionItem.view.yaml
+++ b/packages/rettangoli-ui/src/components/accordionItem/accordionItem.view.yaml
@@ -1,55 +1,25 @@
-elementName: rtgl-accordion-item
-
-viewDataSchema:
-  type: object
-  properties:
-    label:
-      type: string
-    content:
-      type: string
-    openClass:
-      type: string
-    chevronIcon:
-      type: string
-    containerAttrString:
-      type: string
-
-propsSchema:
-  type: object
-  properties:
-    label:
-      type: string
-    content:
-      type: string
-    w:
-      type: string
-
 refs:
   header:
     eventListeners:
       click:
         handler: handleClickHeader
-
 styles:
   .content-wrapper:
     display: grid
     grid-template-rows: 0fr
     transition: grid-template-rows 0.2s ease-out
-
   .content-wrapper.open:
     grid-template-rows: 1fr
-
   .content-inner:
     overflow: hidden
-
 template:
   - rtgl-view d=v ${containerAttrString}:
       - rtgl-view#header d=h av=c w=f pv=md cur=p:
           - rtgl-text: ${label}
-          - rtgl-view w=1fg:
-          - rtgl-svg svg=${chevronIcon} wh=16 c=mu-fg:
+          - rtgl-view w=1fg: null
+          - rtgl-svg svg=${chevronIcon} wh=16 c=mu-fg: null
       - div class="${openClass}":
           - div class=content-inner:
               - rtgl-view pb=md:
                   - rtgl-text c=mu-fg: ${content}
-                  - slot name=content:
+                  - slot name=content: null
