--- a/packages/rettangoli-ui/src/components/pageOutline/pageOutline.view.yaml
+++ b/packages/rettangoli-ui/src/components/pageOutline/pageOutline.view.yaml
@@ -1,41 +1,8 @@
-elementName: rtgl-page-outline
-
-viewDataSchema:
-  type: object
-  properties:
-    items:
-      type: array
-      items:
-        type: object
-        properties:
-          slug:
-            type: string
-          title:
-            type: string
-    selectedSlug:
-      type: string
-      nullable: true
-
-propsSchema:
-  type: object
-  properties:
-    targetId:
-      type: string
-    scrollContainerId:
-      type: string
-    offsetTop:
-      type: string
-
 refs: {}
-
-events:
-  onItemClick:
-    type: object
-
 template:
   - rtgl-view h=f w=272 pr=md:
       - rtgl-view w=f mt=xl:
           - $for item, i in items:
               - rtgl-view d=h bwl=xs bc="${item.bc}" pv=sm av=c href=${item.href} pl=md:
-                  - rtgl-view w=${item.ml}:
+                  - rtgl-view w=${item.ml}: null
                   - rtgl-text s=sm c=${item.c} h-c=fg: ${item.title}
