--- a/packages/rettangoli-ui/src/components/sliderInput/sliderInput.view.yaml
+++ b/packages/rettangoli-ui/src/components/sliderInput/sliderInput.view.yaml
@@ -1,27 +1,3 @@
-elementName: rtgl-slider-input
-
-viewDataSchema:
-  type: object
-
-propsSchema:
-  type: object
-  properties:
-    value:
-      type: string
-      default: "0"
-    w:
-      type: string
-      default: ""
-    min:
-      type: string
-      default: "0"
-    max:
-      type: string
-      default: "100"
-    step:
-      type: string
-      default: "1"
-
 refs:
   input:
     eventListeners:
@@ -35,13 +11,8 @@ refs:
         handler: handleValueChange
       value-input:
         handler: handleValueInput
-
-events:
-  value-input: {}
-  value-change: {}
-
 template:
   - rtgl-view d=h av=c g=md w=${w}:
-      - rtgl-slider#slider key=${key} w=f type=range min=${min} max=${max} step=${step} value=${value}:
+      - rtgl-slider#slider key=${key} w=f type=range min=${min} max=${max} step=${step} value=${value}: null
       - rtgl-view w=84:
-          - rtgl-input#input key=${key} w=f type=number min=${min} max=${max} step=${step} value=${value}:
+          - rtgl-input#input key=${key} w=f type=number min=${min} max=${max} step=${step} value=${value}: null
