--- a/packages/rettangoli-ui/src/components/navbar/navbar.view.yaml
+++ b/packages/rettangoli-ui/src/components/navbar/navbar.view.yaml
@@ -1,74 +1,30 @@
-elementName: rtgl-navbar
-
-viewDataSchema:
-  type: object
-  properties:
-    containerAttrString:
-      type: string
-    start:
-      type: object
-      properties:
-        label:
-          type: string
-        href:
-          type: string
-        image:
-          type: object
-          properties:
-            src:
-              type: string
-        hasImage:
-          type: boolean
-        hasHref:
-          type: boolean
-
-propsSchema:
-  type: object
-  properties:
-    start:
-      type: object
-      properties:
-        label:
-          type: string
-        href:
-          type: string
-        image:
-          type: object
-          properties:
-            src:
-              type: string
-
 refs:
   start:
     eventListeners:
       click:
         handler: handleClickStart
-
-events:
-  start-click:
-    type: object
-    properties:
-      path:
-        type: string
-
 anchors:
-  - &image
-    - rtgl-text s=lg: "${start.label}"
+  - - rtgl-text s=lg: ${start.label}
     - $if start.image && start.image.src:
-        - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}:
-
+        - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}: null
 template:
   - rtgl-view bgc=bg d=h h=48 av=c w=f ${containerAttrString}:
-    - $if start.href:
-        - a href=${start.href}:
+      - $if start.href:
+          - a href=${start.href}:
+              - rtgl-view d=h av=c g=lg g=md:
+                  - - rtgl-text s=lg: ${start.label}
+                    - $if start.image && start.image.src:
+                        - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}: null
+        $elif start.path:
+          - rtgl-view#start d=h av=c g=lg g=md cur=p:
+              - - rtgl-text s=lg: ${start.label}
+                - $if start.image && start.image.src:
+                    - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}: null
+        $else:
           - rtgl-view d=h av=c g=lg g=md:
-            - *image
-      $elif start.path:
-        - rtgl-view#start d=h av=c g=lg g=md cur=p:
-          - *image
-      $else:
-        - rtgl-view d=h av=c g=lg g=md:
-          - *image
-    - rtgl-view w=1fg:
-    - rtgl-view d=h av=c g=lg:
-      - slot name=right:
+              - - rtgl-text s=lg: ${start.label}
+                - $if start.image && start.image.src:
+                    - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}: null
+      - rtgl-view w=1fg: null
+      - rtgl-view d=h av=c g=lg:
+          - slot name=right: null
