--- a/packages/rettangoli-ui/src/components/waveform/waveform.view.yaml
+++ b/packages/rettangoli-ui/src/components/waveform/waveform.view.yaml
@@ -1,34 +1,10 @@
-elementName: rtgl-waveform
-
-propsSchema:
-  type: object
-  properties:
-    w:
-      type: string
-      description: Width of the waveform visualizer
-      default: '250'
-    h:
-      type: string
-      description: Height of the waveform visualizer
-      default: '150'
-    cur:
-      type: string
-      description: cursor
-    waveformData:
-      type: object
-      description: File ID of the waveform data in object storage
-    isLoading:
-      type: boolean
-      description: Whether the waveform data is currently being loaded
-
 refs:
   canvas:
     selector: canvas
-
 template:
   - rtgl-view w=f h=f pos=rel w=${w} h=${h} cur=${cur}:
-    - $if isLoading:
-        - rtgl-view w=f h=f av=c ah=c:
-          - rtgl-text c=mu-fg: ...
-      $else:
-        - 'canvas#canvas style="width:100%; height:100%;"':
+      - $if isLoading:
+          - rtgl-view w=f h=f av=c ah=c:
+              - rtgl-text c=mu-fg: ...
+        $else:
+          - canvas#canvas style="width:100%; height:100%;": null
