--- a/.github/workflows/publish-vt.yaml
+++ b/.github/workflows/publish-vt.yaml
@@ -6,6 +6,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   publish-vt:
     runs-on: ubuntu-latest
