chore(fe): move example2/3 into rettangoli-fe/e2e, bump docker to rc2
Move E2E test suites from top-level examples/ into packages/rettangoli-fe/e2e/:
- examples/example2 → e2e/interactions (counter, item-list, composed)
- examples/example3 → e2e/dashboard (pixel-grid, kanban, stepper, dashboard)

Regenerate VT reference screenshots via Docker (Linux/Playwright) for
cross-platform consistency. Update .gitignore and .npmignore accordingly.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@
 
 /examples/example1/dist
 
+/packages/rettangoli-fe/e2e/*/.rettangoli
+/packages/rettangoli-fe/e2e/*/.temp
+/packages/rettangoli-fe/e2e/*/static
+/packages/rettangoli-fe/e2e/*/vt/static
+
 /node_modules
 
 .claude/
