--- a/packages/rettangoli-fe/package.json
+++ b/packages/rettangoli-fe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rettangoli/fe",
-  "version": "0.0.14",
+  "version": "1.0.0-rc1",
   "description": "Frontend framework for building reactive web components",
   "type": "module",
   "main": "./src/index.js",
