fix(fe): address P0/P1 robustness issues across runtime and parser
- Preserve last successful vnode on render error for recovery
- Throw instead of console.error for parser input validation
- Clean up debounce timer ref on callback error
- Wrap YAML loading in try-catch in contracts CLI
- Guard against prototype pollution in property path resolution
- Simplify vnode key generation (drop JSON.stringify)
- Add error-path contract tests for all fixes
- Fix test helper for internalized snabbdom imports

--- a/packages/rettangoli-fe/spec/parser-core-contract.spec.yaml
+++ b/packages/rettangoli-fe/spec/parser-core-contract.spec.yaml
@@ -31,3 +31,13 @@ out:
   hookFactoryCalls: 0
   hasHook: false
   hasUpdateFn: false
+---
+suite: parser-error-contract
+exportName: runParserCoreErrorContract
+---
+case: throws on non-array input to createVirtualDom
+in:
+  - scenario: non_array_input
+out:
+  threw: true
+  messageContains: true
