--- a/packages/rettangoli-fe/spec/component-orchestrator-contract.spec.yaml
+++ b/packages/rettangoli-fe/spec/component-orchestrator-contract.spec.yaml
@@ -46,3 +46,14 @@ out:
     - submitButton
   submitButton: btn-elm
   hasStale: false
+---
+case: render error preserves previous vnode and component recovers on next render
+in:
+  - mode: render_error_recovery
+out:
+  firstHasVNode: true
+  secondPreservesVNode: true
+  thirdRecovered: true
+  errorCount: 1
+  errorMessage: template render failed
+  totalRenderCalls: 3
