--- a/packages/rettangoli-fe/spec/events-core-contract.spec.yaml
+++ b/packages/rettangoli-fe/spec/events-core-contract.spec.yaml
@@ -59,3 +59,10 @@ in:
   - scenario: throttle_leading_only
 out:
   called: 2
+---
+case: debounce clears timer ref even when callback throws
+in:
+  - scenario: debounce_clears_timer_on_callback_error
+out:
+  threw: true
+  timerCleared: true
